[FIX] navbar z-index

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,6 +7,7 @@
   top: 0;
   height: 80px;
   background: white;
+  z-index: 999;
 }
 .navbar__top {
   margin-top: 10px;
@@ -68,6 +69,7 @@
   padding-top: 80px;
   padding-bottom: 56px;
   overflow-y: hidden;
+
 }
 
 .main {
